--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "@huggingface/transformers": "^3.7.5",
     "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.78",
+    "@langchain/groq": "^0.2.4",
     "@langchain/openai": "^0.6.16",
     "@langchain/qdrant": "^0.1.3",
     "bullmq": "^5.61.0",
